--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,38 @@
-[tool.poetry]
+[project]
 name = "bnnc2"
 version = "0.1.0"
-description = ""
-authors = ["''"]
+description = "BNNC2"
 readme = "README.md"
-package-mode = false
+requires-python = "==3.13.2"
+dependencies = [
+    "aiohttp[speedups]==3.11.14",
+    "asyncpg==0.30.0",
+    "asyncpg-stubs==0.30.1",
+    "dacite==1.9.2",
+    "loguru==0.7.3",
+    "orjson==3.10.16",
+    "result==0.17.0",
+    "websockets==15.0.1",
+]
 
-[tool.poetry.dependencies]
-python = "3.13.2"
-result = "0.17.0"
-orjson = "3.10.15"
-aiohttp = { extras = ["speedups"], version = "3.11.12" }
-loguru = "0.7.3"
-websockets = "15.0"
-dacite = "1.9.2"
-asyncpg = "0.30.0"
-asyncpg-stubs = "0.30.0"
+[dependency-groups]
+dev = [
+    "mypy==1.15.0",
+    "pytest-cov==6.0.0",
+    "ruff==0.11.2",
+]
+[tool.mypy]
+exclude = "tests"
 
+[tool.vulture]
+exclude = [".venv", "tests"]
 
-[tool.poetry.group.dev.dependencies]
-black = "25.1.0"
-ruff = "0.9.7"
-mypy = "1.15.0"
-vulture = "2.14"
-pytest-cov = "6.0.0"
+[tool.pytest.ini_options]
+addopts = "--cov=src --cov-report term-missing"
 
 [tool.ruff]
 lint.select = ["ALL"]
-lint.ignore = ["E501", "N815", "E741"]
-lint.fixable = ["I", "COM", "D202"]
-lint.mccabe.max-complexity = 5
+lint.ignore = ["N815", "E501", "COM812"]
+lint.fixable = ["ALL"]
+lint.mccabe.max-complexity = 10
 lint.pydocstyle.convention = "google"
-
-target-version = "py313"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
